@@ -19,10 +19,12 @@ import java.nio.MappedByteBuffer;
 import java.util.ArrayList;
 import java.util.List;
 
+import lombok.Getter;
 import lombok.RequiredArgsConstructor;
+import lombok.experimental.Accessors;
 import net.consensys.linea.zktracer.ColumnHeader;
-import net.consensys.linea.zktracer.container.stacked.list.StackedList;
-import net.consensys.linea.zktracer.module.Module;
+import net.consensys.linea.zktracer.container.module.OperationListModule;
+import net.consensys.linea.zktracer.container.stacked.StackedList;
 import net.consensys.linea.zktracer.module.euc.Euc;
 import net.consensys.linea.zktracer.module.wcp.Wcp;
 import net.consensys.linea.zktracer.types.TransactionProcessingMetadata;
@@ -31,13 +33,14 @@ import org.hyperledger.besu.plugin.data.BlockHeader;
 import org.hyperledger.besu.plugin.data.ProcessableBlockHeader;
 
 @RequiredArgsConstructor
-public class TxnData implements Module {
+@Accessors(fluent = true)
+public class TxnData implements OperationListModule<TxndataOperation> {
+  @Getter private final StackedList<TxndataOperation> operations = new StackedList<>();
 
   private final Wcp wcp;
   private final Euc euc;
 
   private final List<BlockSnapshot> blocks = new ArrayList<>();
-  private final StackedList<TxndataOperation> txs = new StackedList<>();
 
   @Override
   public String moduleKey() {
@@ -45,64 +48,53 @@ public class TxnData implements Module {
   }
 
   @Override
-  public void enterTransaction() {
-    this.txs.enter();
-  }
-
-  @Override
-  public void popTransaction() {
-    this.txs.pop();
-  }
-
-  @Override
   public void traceStartConflation(final long blockCount) {
-    this.wcp.additionalRows.push(
-        this.wcp.additionalRows.pop() + 4); /* 4 = byte length of LINEA_BLOCK_GAS_LIMIT */
+    wcp.additionalRows.add(4); /* 4 = byte length of LINEA_BLOCK_GAS_LIMIT */
   }
 
   @Override
   public final void traceStartBlock(final ProcessableBlockHeader blockHeader) {
-    this.blocks.add(new BlockSnapshot(blockHeader));
+    blocks.add(new BlockSnapshot(blockHeader));
   }
 
   @Override
   public void traceEndTx(TransactionProcessingMetadata tx) {
-    this.txs.add(new TxndataOperation(wcp, euc, tx));
+    operations.add(new TxndataOperation(wcp, euc, tx));
   }
 
   @Override
   public void traceEndBlock(final BlockHeader blockHeader, final BlockBody blockBody) {
-    this.currentBlock().setNbOfTxsInBlock(this.currentTx().tx.getRelativeTransactionNumber());
-    this.currentTx().setCallWcpLastTxOfBlock(this.currentBlock().getBlockGasLimit());
+    currentBlock().setNbOfTxsInBlock(currentTx().tx.getRelativeTransactionNumber());
+    currentTx().setCallWcpLastTxOfBlock(currentBlock().getBlockGasLimit());
   }
 
   @Override
   public int lineCount() {
     // The last tx of each block has one more rows
-    return this.txs.lineCount() + this.blocks.size();
+    return operations.lineCount() + blocks.size();
   }
 
   public BlockSnapshot currentBlock() {
-    return this.blocks.get(this.blocks.size() - 1);
+    return blocks.getLast();
   }
 
   private TxndataOperation currentTx() {
-    return this.txs.getLast();
+    return operations.getLast();
   }
 
   @Override
   public List<ColumnHeader> columnsHeaders() {
-    return Trace.headers(this.lineCount());
+    return Trace.headers(lineCount());
   }
 
   @Override
   public void commit(List<MappedByteBuffer> buffers) {
     final Trace trace = new Trace(buffers);
 
-    final int absTxNumMax = this.txs.size();
+    final int absTxNumMax = operations.size();
 
-    for (TxndataOperation tx : this.txs) {
-      tx.traceTx(trace, this.blocks.get(tx.getTx().getRelativeBlockNumber() - 1), absTxNumMax);
+    for (TxndataOperation tx : operations.getAll()) {
+      tx.traceTx(trace, blocks.get(tx.getTx().getRelativeBlockNumber() - 1), absTxNumMax);
     }
   }
 }
